# pdns-pipe-nmc

./: .gitignore  Config.hs  JsonRpcClient.hs  LICENSE  NmcDom.hs  NmcJson.hs  NmcRpc.hs  NmcTransform.hs  PowerDns.hs  README.md  SPEC.md  build  mkhtml  pdns-pipe-nmc.cabal  pdns-pipe-nmc.hs  test.hs
Data/: JsonRpc.hs  JsonRpcClient.hs
d/: ddomob  dnameid  domob  extra1  extra2  extra3  nameid  nf  root  torexample
