name:                pdns-pipe-nmc
version:             0.9.0.0
synopsis:            Namecoin pipe backend for PowerDNS
description:         Realtime bridge between Namecoin "d/" namespace
                     (http://namecoin.info/) and DNS implemented as
                     a pipe backend coprocess for PowerDns
                     (http://www.powerdns.com/).
homepage:            http://www.average.org/pdns-pipe-nmc/
license:             OtherLicense
license-file:        LICENSE
author:              Eugene Crosser
maintainer:          crosser@average.org
copyright:           2014, Eugene Crosser
category:            Database
build-type:          Simple
extra-source-files:  README.md, SPEC.md
cabal-version:       >=1.10

executable pdns-pipe-nmc
  main-is:             pdns-pipe-nmc.hs
  other-modules:       Config
                     , JsonRpcClient
                     , NmcDom
                     , NmcRpc
                     , NmcTransform
                     , PowerDns
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , bytestring
                     , text
                     , split
                     , containers
                     , aeson
                     , ConfigFile
                     , MissingH
                     , vector
                     , unordered-containers
                     , data-default-class >=0.0.1
                     , http-client >=0.2
                     , http-types >=0.6
                     , mtl >=2.0
                     , pretty-show
                     , time
  -- hs-source-dirs:      
  default-language:    Haskell98
